[gd_scene load_steps=10 format=3 uid="uid://d2h6g3xc34kus"]

[ext_resource type="Script" path="res://Scripts/walker.gd" id="1_1x68h"]
[ext_resource type="Texture2D" uid="uid://bf6hj4daiwr8q" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0122.png" id="1_bq83u"]
[ext_resource type="PackedScene" uid="uid://vtopch7mdu4q" path="res://Scenes/Components/health_component.tscn" id="3_n8muq"]
[ext_resource type="PackedScene" uid="uid://ceki30wn2qhsj" path="res://Scenes/Components/hitbox_component.tscn" id="4_3qaax"]
[ext_resource type="PackedScene" uid="uid://32aw63skwci" path="res://Scenes/Components/flash_component.tscn" id="5_j3fx0"]
[ext_resource type="PackedScene" uid="uid://cpu344qbdw6ab" path="res://Scenes/Components/scale_component.tscn" id="6_q5eo8"]
[ext_resource type="PackedScene" uid="uid://duf88sosua32n" path="res://Scenes/Components/shake_component.tscn" id="7_lw5gr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_le72r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yrhqn"]
radius = 11.0

[node name="Walker" type="CharacterBody2D"]
script = ExtResource("1_1x68h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bq83u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_le72r")

[node name="HealthComponent" parent="." instance=ExtResource("3_n8muq")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_3qaax")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_yrhqn")

[node name="FlashComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_j3fx0")]
sprite = NodePath("../Sprite2D")
flash_duration = 0.1

[node name="ScaleComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_q5eo8")]
sprite = NodePath("../Sprite2D")

[node name="ShakeComponent" parent="." node_paths=PackedStringArray("node") instance=ExtResource("7_lw5gr")]
node = NodePath("../Sprite2D")
